--- a/VoalaaAR/Info.plist
+++ b/VoalaaAR/Info.plist
@@ -18,6 +18,8 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+    <key>Privacy - Photo Library Usage Description</key>
+    <string>YOUR CUSTOM USAGE DESCRIPTION GOES HERE.</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSceneManifest</key>
