--- a/VoalaAPPClip/Info.plist
+++ b/VoalaAPPClip/Info.plist
@@ -24,8 +24,13 @@
 	<true/>
     <key>NSCameraUsageDescription</key>
     <string>This application uses the camera to demonstrate new Vision technology.</string>
-<!--    <key>Privacy - Photo Library Usage Description</key>-->
-<!--    <string>we need to access photos to add screenshot.</string>-->
+    <!--    <key>Privacy - Photo Library Usage Description</key>-->
+    <!--    <string>we need to access photos to add screenshot.</string>-->
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 	<key>NSAppClip</key>
 	<dict>
 		<key>NSAppClipRequestEphemeralUserNotification</key>
